--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "headers": [
         {
           "key": "Content-Security-Policy",
-          "value": "default-src * 'unsafe-inline' 'unsafe-eval' data: blob:; script-src * 'unsafe-inline' 'unsafe-eval'; connect-src * 'unsafe-inline'; img-src * data: blob:; style-src * 'unsafe-inline';"
+          "value": "default-src * 'unsafe-inline' 'unsafe-eval' data: blob:; script-src * 'unsafe-inline' 'unsafe-eval'; connect-src * 'unsafe-inline' *; img-src * data: blob:; style-src * 'unsafe-inline';"
         },
         {
           "key": "Access-Control-Allow-Origin",
@@ -18,6 +18,10 @@
     {
       "source": "/kv",
       "destination": "https://api.airtable.com/v0/meta/external/kv"
+    },
+    {
+      "source": "/kv/(.*)",
+      "destination": "https://api.airtable.com/v0/meta/external/kv/$1"
     }
   ]
 }
