--- a/vercel.json
+++ b/vercel.json
@@ -1,27 +1,18 @@
 {
-  "headers": [
+  "version": 2,
+  "builds": [
     {
-      "source": "/(.*)",
-      "headers": [
-        {
-          "key": "Content-Security-Policy",
-          "value": "default-src * 'unsafe-inline' 'unsafe-eval' data: blob:; script-src * 'unsafe-inline' 'unsafe-eval'; connect-src * 'unsafe-inline' *; img-src * data: blob:; style-src * 'unsafe-inline';"
-        },
-        {
-          "key": "Access-Control-Allow-Origin",
-          "value": "*"
-        }
-      ]
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
     }
   ],
-  "rewrites": [
+  "routes": [
     {
-      "source": "/kv",
-      "destination": "https://api.airtable.com/v0/meta/external/kv"
-    },
-    {
-      "source": "/kv/(.*)",
-      "destination": "https://api.airtable.com/v0/meta/external/kv/$1"
+      "src": "/(.*)",
+      "dest": "/index.html"
     }
   ]
 }
